# Search_engine

./: CMakeLists.txt  README.md
google_tests/: inverted_index_tests.h  relative_index_tests.h
include/: converter_json.h  inverted_index.h  search_engine.h  search_server.h  utils.h  utils_json.h  utils_json.h~
json/: answers.json  config.json  requests.json
nlohmann_json/: Makefile  cmake_install.cmake
res/: file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file010.txt  file011.txt  file013.txt  file014.txt  file015.txt  file016.txt  file017.txt  file018.txt  file019.txt  file020.txt  file021.txt  file022.txt
res/file_ru/: file001.txt  file002.txt  file003.txt  file004.txt
src/: converter_json.cpp  inverted_index.cpp  main.cpp  main.cpp~  search_engine.cpp  search_server.cpp  utils.cpp
